# Rectified-Point-Flow

./: .gitignore  .gitmodules  extract_features.py  gpu_usage.csv  pyproject.toml  requirements_other.txt  train.py  train.sh  weights_check.py
config/: RPF_REPA_extract_features.yaml  RPF_base_demo.yaml
config/data/: breaking_bad.yaml  small_dataset.yaml
config/model/: rectified_point_flow.yaml
config/model/encoder/: concerto_repa.yaml
config/model/flow_model/: point_cloud_dit.yaml  small_flow_model.yaml
config/trainer/: main.yaml
config/visualizer/: feature.yaml  overlap.yaml
rectified_point_flow/: __init__.py  modeling.py  visualizer.py
rectified_point_flow/encoder/: __init__.py  point_cloud_teacher.py
rectified_point_flow/flow_model/: point_cloud_dit.py
rectified_point_flow/utils/: callback.py  render.py
